# CommunereRAG

./: Dockerfile  README.md  docker-compose.yml  env.sample  pyproject.toml
.github/workflows/: tests.yml
CommunereRAG/: __init__.py  __main__.py  log.py  settings.py  tkq.py
CommunereRAG/db/dao/: dummy_dao.py
CommunereRAG/db/models/: __init__.py  document_model.py  query_model.py
CommunereRAG/services/: __init__.py
CommunereRAG/services/chroma/: dependency.py
CommunereRAG/services/openai/: dependency.py
CommunereRAG/services/redis/: dependency.py  lifespan.py
CommunereRAG/web/: __init__.py  application.py  lifespan.py
CommunereRAG/web/api/: __init__.py  router.py
CommunereRAG/web/api/docs/: __init__.py
CommunereRAG/web/api/dummy/: __init__.py  views.py
CommunereRAG/web/api/echo/: __init__.py  views.py
CommunereRAG/web/api/logs/: __init__.py  views.py
CommunereRAG/web/api/monitoring/: __init__.py
CommunereRAG/web/api/query/: __init__.py  agent_utils.py  agents.py  views.py
CommunereRAG/web/api/upload/: __init__.py  schema.py  tasks.py  views.py
deploy/: docker-compose.dev.yml
tests/: __init__.py  conftest.py  test_dummy.py
